-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 21, 24, 25
-
Component/s: hotspot
-
b04
-
s390x
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8348479 | 24.0.1 | Amit Kumar | P3 | Resolved | Fixed | b04 |
| JDK-8346905 | 24 | Amit Kumar | P3 | Resolved | Fixed | b30 |
| JDK-8347028 | 21.0.7 | Amit Kumar | P3 | Resolved | Fixed | b01 |
/home/amit/build/jdk/src/hotspot/cpu/s390/vm_version_s390.cpp: In static member function ‘static void VM_Version::initialize()’:
/home/amit/build/jdk/src/hotspot/cpu/s390/vm_version_s390.cpp:328:7: error: ‘OptoScheduling’ was not declared in this scope
328 | if (OptoScheduling) {
| ^~~~~~~~~~~~~~
gmake[3]: *** [lib/CompileJvm.gmk:170: /home/amit/build/jdk/build/linux-s390x-minimal-fastdebug/hotspot/variant-minimal/libjvm/objs/vm_version_s390.o] Error
1
gmake[3]: *** Waiting for unfinished jobs....
gmake[2]: *** [make/Main.gmk:245: hotspot-minimal-libs] Error 2
gmake[2]: *** Waiting for unfinished jobs....
ERROR: Build failed for target 'images' in configuration 'linux-s390x-minimal-fastdebug' (exit code 2)
=== Output from failing command(s) repeated here ===
* For target hotspot_variant-minimal_libjvm_objs_vm_version_s390.o:
/home/amit/build/jdk/src/hotspot/cpu/s390/vm_version_s390.cpp: In static member function ‘static void VM_Version::initialize()’:
/home/amit/build/jdk/src/hotspot/cpu/s390/vm_version_s390.cpp:328:7: error: ‘OptoScheduling’ was not declared in this scope
328 | if (OptoScheduling) {
| ^~~~~~~~~~~~~~
* All command lines available in /home/amit/build/jdk/build/linux-s390x-minimal-fastdebug/make-support/failure-logs.
=== End of repeated output ===
No indication of failed target found.
HELP: Try searching the build log for '] Error'.
HELP: Run 'make doctor' to diagnose build problems.
make[1]: *** [/home/amit/build/jdk/make/Init.gmk:323: main] Error 2
make: *** [/home/amit/build/jdk/make/Init.gmk:189: images] Error 2
- backported by
-
JDK-8346905 [s390x] minimal build failure
-
- Resolved
-
-
JDK-8347028 [s390x] minimal build failure
-
- Resolved
-
-
JDK-8348479 [s390x] minimal build failure
-
- Resolved
-
- relates to
-
JDK-8343884 [s390x] Disallow OptoScheduling
-
- Resolved
-
- links to
-
Commit(jdk24)
openjdk/jdk/4254e99c
-
Commit(master)
openjdk/jdk21u-dev/98e65499
-
Commit(master)
openjdk/jdk/807f6f7f
-
Review(jdk24)
openjdk/jdk/22895
-
Review(master)
openjdk/jdk21u-dev/1296
-
Review(master)
openjdk/jdk24u/9
-
Review(master)
openjdk/jdk/22887