8346847: [s390x] minimal build failure

Backport-of: 807f6f7fb868240cba5ba117c7059216f69a53f9